cambio todas las cards por grillas con imagenes y titulos + parrafos

--- a/detalleCategorias.html
+++ b/detalleCategorias.html
@@ -146,11 +146,13 @@
         </video>
       </article>
       <!-- grilla -->
-      <section class="container my-4">
-        <div class="row row-gap-3">
-          <div class="card col-12 col-md-4 col-lg-3 colorFondoGrillaCel">
+      <!--  <section class="container my-4">
+        <div class="row gap-3">
+          <div
+            class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel border-danger"
+          >
             <img
-              src="./img/celulares/galaxy z flip5.jpg"
+              src=""
               class="card-img-top alturaImGrillaCel"
               alt="celular galaxy Z5"
             />
@@ -162,9 +164,9 @@
               <p class="card-text">6 cuotas de $ 193.900</p>
             </div>
           </div>
-          <div class="card col-12 col-md-4 col-lg-3 h-100 colorFondoGrillaCel">
+          <div class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel">
             <img
-              src="./img/celulares/iphone16.jpg"
+              src=""
               class="card-img-top alturaImGrillaCel"
               alt="celular iphone 16"
             />
@@ -176,9 +178,9 @@
               <p class="card-text">6 cuotas de $</p>
             </div>
           </div>
-          <div class="card col-12 col-md-4 col-lg-3 h-100 colorFondoGrillaCel">
+          <div class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel">
             <img
-              src="./img/celulares/motorola e22.jpg"
+              src=""
               class="card-img-top alturaImGrillaCel"
               alt="celular motorola E22"
             />
@@ -190,9 +192,9 @@
               <p class="card-text">6 cuotas de $</p>
             </div>
           </div>
-          <div class="card col-12 col-md-4 col-lg-3 h-100 colorFondoGrillaCel">
+          <div class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel">
             <img
-              src="./img/celulares/galaxy fold 6.png"
+              src=""
               class="card-img-top alturaImGrillaCel"
               alt="celular galaxy fold 6"
             />
@@ -204,9 +206,9 @@
               <p class="card-text">6 cuotas de $</p>
             </div>
           </div>
-          <div class="card col-12 col-md-4 col-lg-3 h-100 colorFondoGrillaCel">
+          <div class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel">
             <img
-              src="./img/celulares/iphone15.webp"
+              src=""
               class="card-img-top alturaImGrillaCel"
               alt="celular iphone 15"
             />
@@ -218,9 +220,9 @@
               <p class="card-text">6 cuotas de $</p>
             </div>
           </div>
-          <div class="card col-12 col-md-4 col-lg-3 h-100 colorFondoGrillaCel">
+          <div class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel">
             <img
-              src="./img/celulares/galaxy plegable.jpg"
+              src=""
               class="card-img-top alturaImGrillaCel"
               alt="celular galaxy ZFlip3"
             />
@@ -231,6 +233,74 @@
               <p class="card-text">Precio contado: <b>$</b></p>
               <p class="card-text">6 cuotas de $</p>
             </div>
+          </div>
+        </div>
+      </section> -->
+      <section class="container my-4">
+        <div class="row gap-3 justify-content-center">
+          <div
+            class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center p-0 m-0 overflow-hidden"
+          >
+            <img
+              src="./img/celulares/galaxy plegable.jpg"
+              alt="galaxy zflip3"
+              class="img-fluid alturaImGrillaCel"
+            />
+            <div class="fondoInf p-3">
+              <h6><b>Samsung Galaxy Z Flip 5</b></h6>
+              <p class="latraPrecio">Precio contado: $ 361.185</p>
+              <p class="latraCuotas m-0">6 cuotas de $ 81.000</p>
+            </div>
+          </div>
+          <div class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center">
+            <img
+              src="./img/celulares/iphone16.jpg"
+              alt="iphon 16"
+              class="img-fluid alturaImGrillaCel"
+            />
+            <h6><b>Iphone 16 Pro 128 GB</b></h6>
+            <p class="latraPrecio">Precio contado: $ 750.900</p>
+            <p class="latraCuotas">6 cuotas de $ 160.200</p>
+          </div>
+          <div class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center">
+            <img
+              src="./img/celulares/motorola e22.jpg"
+              alt="motorola e22"
+              class="img-fluid alturaImGrillaCel"
+            />
+            <h6><b>Motorola E22 - 128GB</b></h6>
+            <p class="latraPrecio">Precio contado: $ 283.400</p>
+            <p class="latraCuotas">6 cuotas de $ 61.300</p>
+          </div>
+          <div class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center">
+            <img
+              src="./img/celulares/g a56.webp"
+              alt="galaxy A56"
+              class="img-fluid alturaImGrillaCel"
+            />
+            <h6><b>Samsung Galaxy A52</b></h6>
+            <p class="latraPrecio">Precio contado: $ 302.500</p>
+            <p class="latraCuotas">6 cuotas de $ 65.100</p>
+          </div>
+          <div class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center">
+            <img
+              src="./img/celulares/tcl.webp"
+              alt="celular tcl"
+              class="img-fluid alturaImGrillaCel"
+            />
+            <h6><b>TCL 50PRO 125 GB</b></h6>
+            <p class="latraPrecio">Precio contado: $ 194.800</p>
+            <p class="latraCuotas">6 cuotas de $ 42.100</p>
+          </div>
+          <div class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center">
+            <img
+              src="./img/celulares/a32.jpg"
+              alt="galaxy a32"
+              class="img-fluid alturaImGrillaCel"
+            />
+            <h6><b>Samsung Galaxy A32</b></h6>
+            <p class="latraPrecio">Precio contado: $ 207.300</p>
+            <p class="latraCuotas">6 cuotas de $ 44.800</p>
           </div>
         </div>
       </section>
