--- a/detalleCategorias.html
+++ b/detalleCategorias.html
@@ -236,71 +236,103 @@
           </div>
         </div>
       </section> -->
-      <section class="container my-4">
-        <div class="row gap-3 justify-content-center">
-          <div
-            class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center p-0 m-0 overflow-hidden"
-          >
-            <img
-              src="./img/celulares/galaxy plegable.jpg"
-              alt="galaxy zflip3"
-              class="img-fluid alturaImGrillaCel"
-            />
-            <div class="fondoInf p-3">
-              <h6><b>Samsung Galaxy Z Flip 5</b></h6>
-              <p class="latraPrecio">Precio contado: $ 361.185</p>
-              <p class="latraCuotas m-0">6 cuotas de $ 81.000</p>
+      <section class="container my-2">
+        <div class="row row-gap-3">
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card overflow-hidden rounded-3 fondoInf">
+              <img
+                src="./img/celulares/galaxy plegable.jpg"
+                class="card-img-top"
+                alt="galaxy plegable"
+              />
+              <div class="card-body text-center">
+                <p class="card-text letraTitulo">
+                  <b>Samsung Galaxy Z Flip 5</b>
+                </p>
+                <p class="card-text m-0">Contado: $361.185</p>
+                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+              </div>
             </div>
           </div>
-          <div class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center">
-            <img
-              src="./img/celulares/iphone16.jpg"
-              alt="iphon 16"
-              class="img-fluid alturaImGrillaCel"
-            />
-            <h6><b>Iphone 16 Pro 128 GB</b></h6>
-            <p class="latraPrecio">Precio contado: $ 750.900</p>
-            <p class="latraCuotas">6 cuotas de $ 160.200</p>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card overflow-hidden rounded-3 fondoInf">
+              <img
+                src="./img/celulares/tcl.webp"
+                class="card-img-top"
+                alt="celular tcl"
+              />
+              <div class="card-body text-center">
+                <p class="card-text letraTitulo">
+                  <b>Samsung Galaxy Z Flip 5</b>
+                </p>
+                <p class="card-text m-0">Contado: $361.185</p>
+                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+              </div>
+            </div>
           </div>
-          <div class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center">
-            <img
-              src="./img/celulares/motorola e22.jpg"
-              alt="motorola e22"
-              class="img-fluid alturaImGrillaCel"
-            />
-            <h6><b>Motorola E22 - 128GB</b></h6>
-            <p class="latraPrecio">Precio contado: $ 283.400</p>
-            <p class="latraCuotas">6 cuotas de $ 61.300</p>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card overflow-hidden rounded-3 fondoInf">
+              <img
+                src="./img/celulares/2 motorola.jpg"
+                class="card-img-top"
+                alt="celular motorola"
+              />
+              <div class="card-body text-center">
+                <p class="card-text letraTitulo">
+                  <b>Samsung Galaxy Z Flip 5</b>
+                </p>
+                <p class="card-text m-0">Contado: $361.185</p>
+                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+              </div>
+            </div>
           </div>
-          <div class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center">
-            <img
-              src="./img/celulares/g a56.webp"
-              alt="galaxy A56"
-              class="img-fluid alturaImGrillaCel"
-            />
-            <h6><b>Samsung Galaxy A52</b></h6>
-            <p class="latraPrecio">Precio contado: $ 302.500</p>
-            <p class="latraCuotas">6 cuotas de $ 65.100</p>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card overflow-hidden rounded-3 fondoInf">
+              <img
+                src="./img/celulares/motorola e22.jpg"
+                class="card-img-top"
+                alt="celular motorola e22"
+              />
+              <div class="card-body text-center">
+                <p class="card-text letraTitulo">
+                  <b>Samsung Galaxy Z Flip 5</b>
+                </p>
+                <p class="card-text m-0">Contado: $361.185</p>
+                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+              </div>
+            </div>
           </div>
-          <div class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center">
-            <img
-              src="./img/celulares/tcl.webp"
-              alt="celular tcl"
-              class="img-fluid alturaImGrillaCel"
-            />
-            <h6><b>TCL 50PRO 125 GB</b></h6>
-            <p class="latraPrecio">Precio contado: $ 194.800</p>
-            <p class="latraCuotas">6 cuotas de $ 42.100</p>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card overflow-hidden rounded-3 fondoInf">
+              <img
+                src="./img/celulares/Samsung Galaxy A35.jpg"
+                class="card-img-top"
+                alt="galaxy a35"
+              />
+              <div class="card-body text-center">
+                <p class="card-text letraTitulo">
+                  <b>Samsung Galaxy Z Flip 5</b>
+                </p>
+                <p class="card-text m-0">Contado: $361.185</p>
+                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+              </div>
+            </div>
           </div>
-          <div class="border rounded-3 col-12 col-md-3 cl-lg-4 text-center">
-            <img
-              src="./img/celulares/a32.jpg"
-              alt="galaxy a32"
-              class="img-fluid alturaImGrillaCel"
-            />
-            <h6><b>Samsung Galaxy A32</b></h6>
-            <p class="latraPrecio">Precio contado: $ 207.300</p>
-            <p class="latraCuotas">6 cuotas de $ 44.800</p>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card overflow-hidden rounded-3 fondoInf">
+              <img
+                src="./img/celulares/motorola_moto_g14_gris_01_l.jpg"
+                class="card-img-top"
+                alt="motorola g14"
+              />
+              <div class="card-body text-center">
+                <p class="card-text letraTitulo">
+                  <b>Samsung Galaxy Z Flip 5</b>
+                </p>
+                <p class="card-text m-0">Contado: $361.185</p>
+                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
