acomodo las imagenes, agrego precios, reviso que esten responsive

--- a/detalleCategorias.html
+++ b/detalleCategorias.html
@@ -238,14 +238,17 @@
       </section> -->
       <section class="container my-2">
         <div class="row row-gap-3">
+          <!-- 1 -->
           <div class="col-12 col-md-4 col-lg-3">
-            <div class="card overflow-hidden rounded-3 fondoInf">
+            <div
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+            >
               <img
                 src="./img/celulares/galaxy plegable.jpg"
                 class="card-img-top"
                 alt="galaxy plegable"
               />
-              <div class="card-body text-center">
+              <div class="card-body text-center flex-grow-1">
                 <p class="card-text letraTitulo">
                   <b>Samsung Galaxy Z Flip 5</b>
                 </p>
@@ -254,83 +257,98 @@
               </div>
             </div>
           </div>
+          <!-- 2 -->
           <div class="col-12 col-md-4 col-lg-3">
-            <div class="card overflow-hidden rounded-3 fondoInf">
+            <div
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+            >
               <img
                 src="./img/celulares/tcl.webp"
                 class="card-img-top"
                 alt="celular tcl"
               />
-              <div class="card-body text-center">
+              <div class="card-body text-center flex-grow-1">
                 <p class="card-text letraTitulo">
-                  <b>Samsung Galaxy Z Flip 5</b>
+                  <b>TCL 50-Pro 5GB</b>
                 </p>
-                <p class="card-text m-0">Contado: $361.185</p>
-                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+                <p class="card-text m-0">Contado: $ 483.200</p>
+                <p class="card-text letraCuotas">6 cuotas de $ 110.100</p>
               </div>
             </div>
           </div>
+          <!-- 3 -->
           <div class="col-12 col-md-4 col-lg-3">
-            <div class="card overflow-hidden rounded-3 fondoInf">
+            <div
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+            >
               <img
                 src="./img/celulares/2 motorola.jpg"
                 class="card-img-top"
                 alt="celular motorola"
               />
-              <div class="card-body text-center">
+              <div class="card-body text-center flex-grow-1">
                 <p class="card-text letraTitulo">
-                  <b>Samsung Galaxy Z Flip 5</b>
+                  <b>Motorola Moto 622 </b>
                 </p>
-                <p class="card-text m-0">Contado: $361.185</p>
-                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+                <p class="card-text m-0">Contado: $ 295.000</p>
+                <p class="card-text letraCuotas">6 cuotas de $ 67.300</p>
               </div>
             </div>
           </div>
+          <!-- 4 -->
           <div class="col-12 col-md-4 col-lg-3">
-            <div class="card overflow-hidden rounded-3 fondoInf">
+            <div
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+            >
               <img
                 src="./img/celulares/motorola e22.jpg"
                 class="card-img-top"
                 alt="celular motorola e22"
               />
-              <div class="card-body text-center">
+              <div class="card-body text-center flex-grow-1">
                 <p class="card-text letraTitulo">
-                  <b>Samsung Galaxy Z Flip 5</b>
+                  <b>Motorola E22 64 GB</b>
                 </p>
-                <p class="card-text m-0">Contado: $361.185</p>
-                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+                <p class="card-text m-0">Contado: $ 407.300</p>
+                <p class="card-text letraCuotas">6 cuotas de $ 93.400</p>
               </div>
             </div>
           </div>
+          <!-- 5 -->
           <div class="col-12 col-md-4 col-lg-3">
-            <div class="card overflow-hidden rounded-3 fondoInf">
+            <div
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+            >
               <img
                 src="./img/celulares/Samsung Galaxy A35.jpg"
                 class="card-img-top"
                 alt="galaxy a35"
               />
-              <div class="card-body text-center">
+              <div class="card-body text-center flex-grow-1">
                 <p class="card-text letraTitulo">
-                  <b>Samsung Galaxy Z Flip 5</b>
+                  <b>Samsung Galaxy A35 - 5GB</b>
                 </p>
-                <p class="card-text m-0">Contado: $361.185</p>
-                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+                <p class="card-text m-0">Contado: $ 512.300</p>
+                <p class="card-text letraCuotas">6 cuotas de $ 113.400</p>
               </div>
             </div>
           </div>
+          <!-- 6 -->
           <div class="col-12 col-md-4 col-lg-3">
-            <div class="card overflow-hidden rounded-3 fondoInf">
+            <div
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+            >
               <img
                 src="./img/celulares/motorola_moto_g14_gris_01_l.jpg"
                 class="card-img-top"
                 alt="motorola g14"
               />
-              <div class="card-body text-center">
+              <div class="card-body text-center flex-grow-1">
                 <p class="card-text letraTitulo">
-                  <b>Samsung Galaxy Z Flip 5</b>
+                  <b>Motorola G14 128 GB</b>
                 </p>
-                <p class="card-text m-0">Contado: $361.185</p>
-                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+                <p class="card-text m-0">Contado: $ 712.600</p>
+                <p class="card-text letraCuotas">6 cuotas de $ 163.200</p>
               </div>
             </div>
           </div>
