acomodo todas las imagenes, acomodo los precios

--- a/detalleCategorias.html
+++ b/detalleCategorias.html
@@ -146,96 +146,6 @@
         </video>
       </article>
       <!-- grilla -->
-      <!--  <section class="container my-4">
-        <div class="row gap-3">
-          <div
-            class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel border-danger"
-          >
-            <img
-              src=""
-              class="card-img-top alturaImGrillaCel"
-              alt="celular galaxy Z5"
-            />
-            <div class="card-body text-center">
-              <p class="card-text">
-                <b>Celular Samsung galaxy Z Flip5</b>
-              </p>
-              <p class="card-text">Precio contado: <b>$ 986.800</b></p>
-              <p class="card-text">6 cuotas de $ 193.900</p>
-            </div>
-          </div>
-          <div class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel">
-            <img
-              src=""
-              class="card-img-top alturaImGrillaCel"
-              alt="celular iphone 16"
-            />
-            <div class="card-body text-center">
-              <p class="card-text">
-                <b>Celular Iphone 16</b>
-              </p>
-              <p class="card-text">Precio contado:<b>$ </b></p>
-              <p class="card-text">6 cuotas de $</p>
-            </div>
-          </div>
-          <div class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel">
-            <img
-              src=""
-              class="card-img-top alturaImGrillaCel"
-              alt="celular motorola E22"
-            />
-            <div class="card-body text-center">
-              <p class="card-text">
-                <b>Celular Motorola E22</b>
-              </p>
-              <p class="card-text">Precio contado:<b>$ </b></p>
-              <p class="card-text">6 cuotas de $</p>
-            </div>
-          </div>
-          <div class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel">
-            <img
-              src=""
-              class="card-img-top alturaImGrillaCel"
-              alt="celular galaxy fold 6"
-            />
-            <div class="card-body text-center">
-              <p class="card-text">
-                <b>Celular Samsung galaxy Fold6</b>
-              </p>
-              <p class="card-text">Precio contado: <b>$ </b></p>
-              <p class="card-text">6 cuotas de $</p>
-            </div>
-          </div>
-          <div class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel">
-            <img
-              src=""
-              class="card-img-top alturaImGrillaCel"
-              alt="celular iphone 15"
-            />
-            <div class="card-body text-center">
-              <p class="card-text">
-                <b>Celular Iphone 15</b>
-              </p>
-              <p class="card-text">Precio contado: <b>$ </b></p>
-              <p class="card-text">6 cuotas de $</p>
-            </div>
-          </div>
-          <div class="card col-12 col-md-6 col-lg-4 h-100 colorFondoGrillaCel">
-            <img
-              src=""
-              class="card-img-top alturaImGrillaCel"
-              alt="celular galaxy ZFlip3"
-            />
-            <div class="card-body text-center">
-              <p class="card-text">
-                <b>Celular Samsung galaxy Z Flip3</b>
-              </p>
-              <p class="card-text">Precio contado: <b>$</b></p>
-              <p class="card-text">6 cuotas de $</p>
-            </div>
-          </div>
-        </div>
-      </section> -->
       <section class="container my-2">
         <div class="row row-gap-3">
           <!-- 1 -->
@@ -248,12 +158,18 @@
                 class="card-img-top"
                 alt="galaxy plegable"
               />
-              <div class="card-body text-center flex-grow-1">
-                <p class="card-text letraTitulo">
-                  <b>Samsung Galaxy Z Flip 5</b>
-                </p>
-                <p class="card-text m-0">Contado: $361.185</p>
-                <p class="card-text letraCuotas">6 cuotas de $ 72.300</p>
+              <div
+                class="card-body text-center d-flex flex-column justify-content-between"
+              >
+                <div>
+                  <p class="card-text letraTitulo">
+                    <b>Galaxy Z Flip 5</b>
+                  </p>
+                  <p class="card-text m-0">Contado: $361.185</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 72.300
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -267,12 +183,18 @@
                 class="card-img-top"
                 alt="celular tcl"
               />
-              <div class="card-body text-center flex-grow-1">
-                <p class="card-text letraTitulo">
-                  <b>TCL 50-Pro 5GB</b>
-                </p>
-                <p class="card-text m-0">Contado: $ 483.200</p>
-                <p class="card-text letraCuotas">6 cuotas de $ 110.100</p>
+              <div
+                class="card-body text-center d-flex flex-column justify-content-between"
+              >
+                <div>
+                  <p class="card-text letraTitulo">
+                    <b>TCL 50-Pro 5GB</b>
+                  </p>
+                  <p class="card-text m-0">Contado: $ 483.200</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 110.100
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -286,12 +208,18 @@
                 class="card-img-top"
                 alt="celular motorola"
               />
-              <div class="card-body text-center flex-grow-1">
-                <p class="card-text letraTitulo">
-                  <b>Motorola Moto 622 </b>
-                </p>
-                <p class="card-text m-0">Contado: $ 295.000</p>
-                <p class="card-text letraCuotas">6 cuotas de $ 67.300</p>
+              <div
+                class="card-body text-center d-flex flex-column justify-content-between"
+              >
+                <div>
+                  <p class="card-text letraTitulo">
+                    <b>Motorola Moto 622 </b>
+                  </p>
+                  <p class="card-text m-0">Contado: $ 295.000</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 67.300
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -305,12 +233,18 @@
                 class="card-img-top"
                 alt="celular motorola e22"
               />
-              <div class="card-body text-center flex-grow-1">
-                <p class="card-text letraTitulo">
-                  <b>Motorola E22 64 GB</b>
-                </p>
-                <p class="card-text m-0">Contado: $ 407.300</p>
-                <p class="card-text letraCuotas">6 cuotas de $ 93.400</p>
+              <div
+                class="card-body text-center d-flex flex-column justify-content-between"
+              >
+                <div>
+                  <p class="card-text letraTitulo">
+                    <b>Motorola E22 64 GB</b>
+                  </p>
+                  <p class="card-text m-0">Contado: $ 407.300</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 93.400
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -324,12 +258,18 @@
                 class="card-img-top"
                 alt="galaxy a35"
               />
-              <div class="card-body text-center flex-grow-1">
-                <p class="card-text letraTitulo">
-                  <b>Samsung Galaxy A35 - 5GB</b>
-                </p>
-                <p class="card-text m-0">Contado: $ 512.300</p>
-                <p class="card-text letraCuotas">6 cuotas de $ 113.400</p>
+              <div
+                class="card-body text-center d-flex flex-column justify-content-between"
+              >
+                <div>
+                  <p class="card-text letraTitulo">
+                    <b>Galaxy A35 - 5GB</b>
+                  </p>
+                  <p class="card-text m-0">Contado: $ 512.300</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 113.400
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -343,12 +283,18 @@
                 class="card-img-top"
                 alt="motorola g14"
               />
-              <div class="card-body text-center flex-grow-1">
-                <p class="card-text letraTitulo">
-                  <b>Motorola G14 128 GB</b>
-                </p>
-                <p class="card-text m-0">Contado: $ 712.600</p>
-                <p class="card-text letraCuotas">6 cuotas de $ 163.200</p>
+              <div
+                class="card-body text-center d-flex flex-column justify-content-between"
+              >
+                <div>
+                  <p class="card-text letraTitulo">
+                    <b>Motorola G14 128 GB</b>
+                  </p>
+                  <p class="card-text m-0">Contado: $ 712.600</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 163.200
+                  </p>
+                </div>
               </div>
             </div>
           </div>
