agregamos los "comentarios" a la pagina del producto de "telefono1"

--- a/pages/telefono1.html
+++ b/pages/telefono1.html
@@ -170,7 +170,7 @@
          </div>
       </section>
       <section class="container mt-3">
-        <h2 class="fs-1">Caracteristicas del producto</h2>
+        <h2 class="fs-1 pb-5">Caracteristicas del producto</h2>
         <ul class="fs-4">
           <li>
             <p><i class="bi bi-aspect-ratio fs-2"></i> _ Tamaño de la pantalla: <strong>6.7 "</strong> (16.6 cm x 7.22 cm x 6.9 mm)</p>
@@ -192,12 +192,30 @@
           </li>
         </ul>
       </section>
-      <hr class="mx-3 border border-secondary">
+      <hr class="my-5 mx-3 border border-secondary">
       <section class="container-fluid">
-        <div class="border rounded-3 fs-2 bg-primary mb-3 px-3 py-3">
+        <div class="border rounded-3 fs-5 bg-primary mb-3 px-3 py-3">
           <h2 class="text-white">Descripción</h2>
-          <p class="px-5">Si buscás un dispositivo que te permita estar en contacto siempre, este teléfono Z Flip3 5G es una opción excelente. Vas a poder comunicarte de manera inmediata con amigas y amigos, o con las personas de tu familia. Y además, si estás trabajando, vas a alcanzar una mayor colaboración con tu equipo.</p>
+          <p class="px-3 textodesc">Si buscás un dispositivo que te permita estar en contacto siempre, este teléfono Z Flip3 5G es una opción excelente. Vas a poder comunicarte de manera inmediata con amigas y amigos, o con las personas de tu familia. Y además, si estás trabajando, vas a alcanzar una mayor colaboración con tu equipo.</p>
         </div>
+      </section>
+      <hr class="my-5 mx-3 border border-secondary">
+      <section class="container-fluid mb-5">
+        <h2 class="text-black pb-4 px-3">Comentarios</h2>
+        <ul class="list-unstyled px-4">
+          <li class="pb-3">
+            <h3><i class="bi bi-person-circle"></i> Alberto Fernández: <strong>¡Excelente diseño y muy compacto!</strong></h3>
+            <p class="fs-5 text-secondary">Lo compré por el tamaño y estoy encantado. Se pliega perfecto y no ocupa nada en el bolsillo. Ideal para llevar a todos lados.</p>
+          </li>
+          <li class="pb-3">
+            <h3><i class="bi bi-person-circle"></i> Ramiro Marra: <strong>¡La pantalla es increíble!</strong></h3>
+            <p class="fs-5 text-secondary">Los colores son brillantes y la calidad de imagen sorprende. Se nota que es un teléfono de gama alta.</p>
+          </li>
+          <li>
+            <h3><i class="bi bi-person-circle"></i> Nicolas Maduro: <strong>¡Muy buena relación precio-calidad!</strong></h3>
+            <p class="fs-5 text-secondary">No esperaba encontrar este modelo nuevo a este precio. Vino sellado y con todos los accesorios. Recomiendo 100%.</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
