muevo pagina de heladeras dentro de carpeta paginas

--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -163,14 +163,14 @@
               <img
                 src="./img/Heladeras/heladera blanca.jpg"
                 class="card-img-top"
-                alt="galaxy plegable"
+                alt="heladera gafa"
               />
               <div
                 class="card-body text-center d-flex flex-column justify-content-between"
               >
                 <div>
                   <p class="card-text letraTitulo">
-                    <b>Galaxy Z Flip 5</b>
+                    <b>Heladera Gafa HF - No Frost 326 lts</b>
                   </p>
                   <p class="card-text m-0">Contado: $361.185</p>
                   <p class="card-text letraCuotas mt-auto">
@@ -188,7 +188,7 @@
               <img
                 src="./img/Heladeras/hisense.jpg"
                 class="card-img-top"
-                alt="celular tcl"
+                alt="heladera hisense"
               />
               <div
                 class="card-body text-center d-flex flex-column justify-content-between"
