redirecciono todos los liks, incluido del de style, que se modifican por el movimiento de la carpeta

--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/png" sizes="34x34" href="./img/favicon1.png" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>
       ElectroHouse: Electrodomésticos, Tecnología y Artículos de Hogar
     </title>
@@ -147,7 +147,7 @@
       </article> -->
       <div class="text-center">
         <img
-          src="./img/Heladeras/caricatura.avif"
+          src="../img/Heladeras/caricatura.avif"
           alt="caricatura de heladera"
           class="alturaHela mb-3"
         />
@@ -161,7 +161,7 @@
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/Heladeras/heladera blanca.jpg"
+                src="../img/Heladeras/heladera blanca.jpg"
                 class="card-img-top"
                 alt="heladera gafa"
               />
@@ -186,7 +186,7 @@
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/Heladeras/hisense.jpg"
+                src="../img/Heladeras/hisense.jpg"
                 class="card-img-top"
                 alt="heladera hisense"
               />
@@ -211,7 +211,7 @@
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/Heladeras/dreammmm.jpg"
+                src="../img/Heladeras/dreammmm.jpg"
                 class="card-img-top"
                 alt="celular motorola"
               />
@@ -236,7 +236,7 @@
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/Heladeras/lg.avif"
+                src="../img/Heladeras/lg.avif"
                 class="card-img-top"
                 alt="celular motorola e22"
               />
@@ -261,7 +261,7 @@
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/Heladeras/sigma.jpg"
+                src="../img/Heladeras/sigma.jpg"
                 class="card-img-top"
                 alt="galaxy a35"
               />
@@ -286,7 +286,7 @@
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/Heladeras/patrik.jpg"
+                src="../img/Heladeras/patrik.jpg"
                 class="card-img-top"
                 alt="motorola g14"
               />
